made vouched_by page

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_content_section.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_content_section.html
@@ -21,9 +21,10 @@
         <div class="row-1">
             {{post.author}}
             {% if post.is_lft_lfp_post %}
-            <div class="vouch-info"><i class="fa-solid fa-award"></i>
+            <a href="{% url 'vouched-by' post.author.profile.id %}" class="vouch-info"><i class="fa-solid fa-award"></i>
                 {{post.author.profile.vouched_by.count}}
-            </div>
+                {{post.author.profile.id}}
+            </a>
             {% endif %}
         </div>
         <span class="date">
