Added vouched by list

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_profile_info_holder.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_profile_info_holder.html
@@ -17,7 +17,8 @@
                     <h5><b>{{ community.name }}</b></h5>
                 </div>
                 <div>
-                    <button class="profile-interct-button">Joined</button>
+                    <!-- <button class="profile-interct-button">Joined</button> -->
+                    <button class="button-1">Joined</button>
                 </div>
             </div>
             <div class="profile-info-menu-right">
