--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/postElement/post_element_replies.html
@@ -57,7 +57,9 @@
             </div>
             {% if post.is_lft_lfp_post %}
             <div>
-                View Vouches
+                <a href="{% url 'vouched-by' post.author.profile.id %}">View Vouches</a>
+
+
             </div>
             {% endif %}
         </div>
