--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
@@ -60,13 +60,17 @@
 
     </div>
     <div class="profile-info-tabs">
+        {%if profile.user.username%}
         <div class="item profile-info-posts"
             onclick="location.href=`{% url 'user-posts-page' profile.user.username %}`">
             Posts
         </div>
+        {% endif %}
+        {%if profile.user.username%}
         <div class="item profile-info-stats"
             onclick="location.href=`{% url 'user-profile-stats' profile.user.username %}`">Profile
         </div>
+        {% endif %}
         <div class="item profile-info-following">Following</div>
         <div class="item profile-info-followers">Followers</div>
 
