moved featured communities in Utilities functi9on file

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/communities_list.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/communities_list.html
@@ -8,7 +8,7 @@
         </div>
 
         <table class="community-table-sidebar">
-            {%for community in communities %}
+            {%for community in featured_communities %}
             <tr class="community-item-sidebar">
                 <div class="community-item-sidebar-row">
                     <td class="community-profile-pic-sidebar">
