--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
@@ -88,6 +88,7 @@
         {% endif %}
         <div class="item profile-info-following">Following</div>
         <div class="item profile-info-followers">Followers</div>
+        <a href="{% url 'user-communities' profile.user.id %}" class="item">Communities</a>
 
     </div>
 </div>
