--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_info_holder.html
@@ -30,6 +30,7 @@
                     </button> -->
 
                     {% if vouched_for_user %}
+
                     <button class="vouch-user-button button-4" value="{{profile.user.id}}">Vouched <i
                             class='fa-solid fa-check'></i></button>
 
@@ -48,18 +49,19 @@
                     <div class="number">{{profile.following.count}}</div>
                     <div class="label">Following</div>
                 </div>
+                {% if profile.id %}
                 <a href="{% url 'vouched-by' profile.id %}" class="info">
                     <div class="number vouch-count">{{vouch_count}}</div>
                     <div class="label">Vouches</div>
                 </a>
-
+                {% endif %}
             </div>
         </div>
 
     </div>
     <div class="profile-info-tabs">
         {%if profile.user.username%}
-
+        {% if profile.id %}
         {% if page == 'user_posts_page' %}
         <div class="item selected-tab" onclick="location.href=`{% url 'user-posts-page' profile.user.username %}`">
             Posts
@@ -69,12 +71,14 @@
             Posts
         </div>
         {% endif %}
-
+        {% endif %}
         {% endif %}
 
 
-        {%if profile.user.username%}
 
+
+        {%if profile.user.username%}
+        {% if profile.id %}
         {% if page == 'user_profile_page' %}
         <div class="item selected-tab" onclick="location.href=`{% url 'user-profile-stats' profile.user.username %}`">
             Profile
@@ -84,16 +88,18 @@
             Profile
         </div>
         {% endif %}
-
+        {% endif %}
         {% endif %}
 
         {% if user.is_authenticated %}
+        {% if profile.id %}
         {% if page == 'user_communities_page' %}
         <a class="item selected-tab" href="{% url 'user-communities' profile.user.id %}" class="item">Communities
             ({{profile.communities.all.count}})</a>
         {% else %}
         <a class="item" href="{% url 'user-communities' profile.user.id %}" class="item">Communities
             ({{profile.communities.all.count}})</a>
+        {% endif %}
         {% endif %}
         {% endif %}
 
