--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/vouched_by.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/vouched_by.html
@@ -18,39 +18,7 @@ Page3 - Vouched By
         <div class="posts-timeline">
             <div class="page-title">Vouches</div>
             <br />
-            {% for user in vouched_by %}
-            <div class="account-list-item">
-
-                <div class="profile-pic">
-                    <a href="{%url 'user-posts-page' user %}">
-                        {% if user.profile.profile_pic.name %}
-                        <img src="{{ user.profile.profile_pic.url}}">
-                        {% else %}
-
-                        <img src="{% static 'PostIT/images/profilepic.jpg' %}">
-                        {% endif %}
-                    </a>
-                </div>
-                <div class="info">
-                    <div class="username">
-                        <a href="{%url 'user-posts-page' user %}">@{{user.username}}</a>
-                    </div>
-                    <div class="bio">
-                        {{user.profile.bio}}
-                    </div>
-                </div>
-                {% if user in users_currently_following %}
-                <button class="interact-button button-1" value="{{user.id}}">
-                    Following
-                </button>
-                {% else %}
-                <button class="interact-button button-1" value="{{user.id}}">
-                    Follow
-                </button>
-                {% endif %}
-            </div>
-            {% endfor %}
-
+            {% include 'user/account_items_list.html'%}
 
         </div>
         {% include 'navigation/sidebar.html' %}
@@ -58,46 +26,6 @@ Page3 - Vouched By
 </div>
 
 
-
-<script>
-    function updateInteractButtonText(btn) {
-        if (following_status) {
-
-            btn[0].innerHTML = "Following"
-        }
-        else {
-            btn[0].innerHTML = "Follow"
-        }
-
-        console.log(btn[0].innerHTML)
-    }
-
-
-    $(document).on('click', '.interact-button', function (e) {
-        e.preventDefault();
-
-        var this_ = $(this)
-        userid = this_.attr("value").valueOf()
-        console.log("Trying to follow: ", userid)
-        // var somevar = this_.attr()
-        $.ajax({
-            type: 'POST',
-            url: '{% url "follow-user" %}',
-            data: {
-                userid: userid,
-                action: 'post',
-            },
-            success: function (json) {
-                following_status = json['result'];
-                console.log(json)
-                updateInteractButtonText(this_, following_status)
-            },
-            error: function (xhr, errmsg, err) {
-
-            }
-        });
-    })
-</script>
 
 
 {% endblock content %}
