improved search results page

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -788,6 +788,16 @@ p::-webkit-scrollbar {
     font-weight: bold;
 }
 
+.search-results-page-contents {
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 50px;
+    position: relative;
+
+
+}
+
 .community-page-contents {
     margin: 0 auto;
 }
