--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/navbar-top.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/navbar-top.html
@@ -109,6 +109,17 @@
         </li>
 
     </ul>
+
+    <ul class="nav-right-mobile-ul">
+
+        {% if user.profile.profile_pic.name %}
+        <img class="profile-img-navbar" src="{{ user.profile.profile_pic.url}}" width="200">
+        {% else %}
+
+        <img src="{% static 'PostIT/images/profilepic.jpg' %}" width="200">
+        {% endif %}
+
+    </ul>
 </nav>
 <div class="blocker-navbar" id="blocker-navbar"></div>
 
