--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/sidebar_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/sidebar_style.css
@@ -276,12 +276,14 @@
 }
 
 .gamer_profile_stats_section,
+.mobile_sidebar_gamer_profile_stats_section,
 .sidebar_gamer_profile_stats_section .gamer_profle_info {
     display: flex;
     flex-direction: column;
 }
 
 .gamer_profile_stats_section .game_stat,
+.mobile_sidebar_gamer_profile_stats_section .game_stat,
 .sidebar_gamer_profile_stats_section .gamer_profle_info .game_stat {
     padding: 10px 20px;
     display: flex;
@@ -291,12 +293,14 @@
 }
 
 .gamer_profile_stats_section,
+.mobile_sidebar_gamer_profile_stats_section,
 .sidebar_gamer_profile_stats_section .label {
     color: var(--text-secondary-color);
 
 }
 
 .gamer_profile_stats_section,
+.mobile_sidebar_gamer_profile_stats_section,
 .sidebar_gamer_profile_stats_section .value {
     color: var(--text-secondary2-color);
 }
@@ -441,6 +445,32 @@
 
 /* Communities section  sidebar end */
 
+/* Mobile right  sidebar start */
+
+.blocker {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    z-index: 140;
+}
+
+.sidebar-right-mobile {
+
+    flex-direction: column;
+    width: 400px;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0px;
+    margin-left: auto;
+    z-index: 150;
+    background-color: var(--tertiary1_bg_color);
+    padding: 0 5px;
+}
+
+/* Mobile right  sidebar end */
 @media (max-width:500px) {
     .sidebar {
         display: none;
