--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -252,6 +252,10 @@ i:hover {
     margin: auto 0;
 }
 
+#main-nav .nav-right-mobile-ul {
+    display: none;
+}
+
 #main-nav li {
     text-align: center;
     position: relative;
@@ -858,7 +862,8 @@ h2::-webkit-scrollbar {
 
 
 
-#gamer_profiles-btn {
+#gamer_profiles-btn,
+#mobile-sidebar-gamer_profiles-btn {
     display: flex;
     align-items: center;
     padding: 15px;
@@ -872,18 +877,21 @@ h2::-webkit-scrollbar {
     justify-content: space-between;
 }
 
-#gamer_profiles-btn div {
+#gamer_profiles-btn div,
+#mobile-sidebar-gamer_profiles-btn div {
     display: flex;
     justify-content: flex-start;
     font-weight: bold;
 }
 
-#gamer_profiles-btn i {
+#gamer_profiles-btn i,
+#mobile-sidebar-gamer_profiles-btn i {
     position: relative;
     top: -4px;
 }
 
-#gamer_profiles-btn img {
+#gamer_profiles-btn img,
+#mobile-sidebar-gamer_profiles-btn img {
     width: 20px;
     height: 20px;
     object-fit: cover;
@@ -892,14 +900,16 @@ h2::-webkit-scrollbar {
 
 
 
-.gamer_profiles_dropdown-container {
+.gamer_profiles_dropdown-container,
+.mobile_sidebar_gamer_profiles_dropdown-container {
     width: inherit;
     margin: 0 auto;
 
 }
 
 
-.gamer_profiles_dropdown {
+.gamer_profiles_dropdown,
+.mobile_sidebar_gamer_profiles_dropdown {
     display: flex;
     position: absolute;
     margin: 0 auto;
@@ -915,13 +925,15 @@ h2::-webkit-scrollbar {
 
 
 
-.gamer_profiles_dropdown img {
+.gamer_profiles_dropdown img,
+.mobile_sidebar_gamer_profiles_dropdown img {
     width: 20px;
     height: 20px;
     object-fit: cover;
 }
 
-.gamer_profiles_dropdown-item {
+.gamer_profiles_dropdown-item,
+.mobile_sidebar_gamer_profiles_dropdown-item {
     margin: 0 10px;
     padding: 0 10px;
 }
@@ -1596,6 +1608,22 @@ h2::-webkit-scrollbar {
 
     #main-nav .nav-right-ul {
         display: none;
+    }
+
+    #main-nav .nav-right-mobile-ul {
+        display: flex;
+        justify-self: flex-end;
+        align-self: flex-end;
+        align-items: flex-end;
+        justify-content: flex-end;
+
+    }
+
+    #main-nav .nav-right-mobile-ul img {
+        width: 40px;
+        height: 40px;
+        object-fit: cover;
+        border-radius: 50%;
     }
 
     .search-bar {
