--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/user/user_profile_stats.html
@@ -25,9 +25,9 @@ Page3 - Profile
                 </div>
 
 
-                {%for g in desired_gamer_profiles%}
+                {%for g in selected_user_gamer_profiles%}
 
-                {% if g.game == desired_main_gamer_profile.main_gamer_profile.game %}
+                {% if g.game == selected_user_main_gamer_profile.main_gamer_profile.game %}
 
                 <div class="main_game" style="display: none;">{{g.game}}</div>
 
@@ -36,8 +36,8 @@ Page3 - Profile
                 {%endif%}
                 {%endfor%}
                 <div class="game-specific-all-stats">
-                    {%for g in desired_gamer_profiles%}
-                    {% if g.game == desired_main_gamer_profile.main_gamer_profile.game %}
+                    {%for g in selected_user_gamer_profiles%}
+                    {% if g.game == selected_user_main_gamer_profile.main_gamer_profile.game %}
                     <button id="gamer_profiles-btn_to_show_all_stats">
                         <div>
                             {%for logo, url in game_logos.items%}
@@ -57,7 +57,7 @@ Page3 - Profile
                 </div>
                 <div class="gamer_profiles_all_stats_dropdown-container">
                     <div class="gamer_profiles_all_stats_dropdown">
-                        {%for g in desired_gamer_profiles%}
+                        {%for g in selected_user_gamer_profiles%}
                         <button class="gamer_profiles_all_stats_dropdown-btn">
 
                             {%for logo, url in game_logos.items%}
@@ -130,14 +130,12 @@ Page3 - Profile
 
     var selected_gamer_profile;
     $('.gamer_profiles_all_stats_dropdown-container').css('display', 'none');
-    $(document).ready(function () {
-        document.getElementById("gamer_profiles-btn_to_show_all_stats").addEventListener("click", Toggle_Main_Dropdown_Display);
-
-
+    window.onload = function () {
+        $('#gamer_profiles-btn_to_show_all_stats').click(Toggle_Main_Dropdown_Display)
         selected_gamer_profile = $('.main_game').text();
         get_selected_game_stats();
         Toggle_Main_Dropdown_Display();
-    });
+    };
 
     $('.gamer_profiles_all_stats_dropdown-btn').click(function () {
         selected_gamer_profile = $(this).text().trim();
