added search field in all communities page

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/style.css
@@ -382,6 +382,12 @@ i:hover {
     padding-left: 20px;
 }
 
+.page-specific-search-bar {
+    text-align: left !important;
+    padding: 20px;
+
+}
+
 
 /* add post navbar */
 
