--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
@@ -79,6 +79,18 @@
     text-align: left;
 }
 
+.button-5 {
+    background-color: var(--primary_color);
+    max-width: 190px;
+    border-radius: 50px;
+    padding: 10px;
+    font-size: small;
+    margin: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    text-align: center;
+}
+
 .add-post-button {
     /* background-color: var(--tertiary1_bg_color);
     padding: 7px;
