--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -27,8 +27,12 @@
             <div class="value"> {{g.region}}</div>
         </div>
         <div class="game_stat top_game_stat">
-            <div class="label"><i class="fa-solid fa-location-dot"></i> Region :</div>
-            <div class="value"> </div>
+            <div class="label"><i class="fa-solid fa-location-dot"></i> Servers :</div>
+            <div class="value">
+                {%for server in g.servers %}
+                {{server}} &nbsp;
+                {%endfor%}
+            </div>
         </div>
         <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-clock"></i> Availability :</div>
