added age and fixed looks of fields

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
@@ -46,6 +46,10 @@ Create Gamer Profile
                             <select class="ranks" name="rank" form="gamerprofile_form"></select>
                         </div>
                         <div class="profile-item">
+                            <div class="label"> Peak Rank</div>
+                            <input class="peak_rank" name="peak_rank" form="gamerprofile_form">
+                        </div>
+                        <div class="profile-item">
                             <div class="label"> Achievements</div>
                             <textarea class="achievements" name="achievements"
                                 placeholder="eg. I have been a Radiant player for 2 years, I have played in Tier 2 LAN tournaments"
