--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -17,23 +17,32 @@
             <div class="value">{{g.in_game_user_id}}</div>
         </div>
 
+        {% if g.age %}
         <div class="game_stat top_game_stat">
-            <div class="label"><i class="fa-solid fa-ranking-star"></i>Rank :</div>
-            <div class="value">{{g.rank}}</div>
+            <div class="label"><i class="fa-solid fa-calendar"></i>Age :</div>
+            <div class="value">{{g.age}}
+            </div>
+        </div>
+        {% endif %}
+
+        <div class="game_stat top_game_stat">
+            <div class="label"><i class="fa-solid fa-ranking-star"></i>Current/ Peak Rank :</div>
+            <div class="value">{{g.rank}}
+                {% if g.peak_rank %}
+                /{{g.peak_rank}}
+                {% endif %}
+            </div>
         </div>
 
         <div class="game_stat top_game_stat">
-            <div class="label"><i class="fa-solid fa-server"></i> Region :</div>
-            <div class="value"> {{g.region}}</div>
-        </div>
-        <div class="game_stat top_game_stat">
-            <div class="label"><i class="fa-solid fa-location-dot"></i> Servers :</div>
-            <div class="value">
-                {%for server in g.servers %}
-                {{server}} &nbsp;
-                {%endfor%}
+            <div class="label"><i class="fa-solid fa-server"></i> Region (Servers) :</div>
+            <div class="value"> {{g.region}}
+                ({%for server in g.servers %}
+                {{server}}, &nbsp;
+                {%endfor%})
             </div>
         </div>
+
         <div class="game_stat top_game_stat">
             <div class="label"><i class="fa-solid fa-clock"></i> Availability :</div>
             <div class="value"> {{g.time_available}}</div>
