--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/edit_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/edit_gamer_profile.html
@@ -55,6 +55,10 @@ Create Gamer Profile
                             <select class="ranks" name="rank" form="gamerprofile_form"></select>
                         </div>
                         <div class="profile-item">
+                            <div class="label"> Peak Rank</div>
+                            <input class="peak_rank" name="peak_rank" form="gamerprofile_form">
+                        </div>
+                        <div class="profile-item">
                             <div class="label"> Achievements</div>
                             <textarea class="achievements" name="achievements"
                                 placeholder="eg. I have been a Radiant player for 2 years, I have played in Tier 2 LAN tournaments"
@@ -191,6 +195,8 @@ Login first!
                         $('.ranks').append(`<option>${response['ranks'][i][0]}</option>`)
 
                 }
+                $('.peak_rank').empty();
+                $('.peak_rank').val(response['peak_rank'])
 
                 if (response['achievements'].length > 1) {
                     $('.achievements').val(response['achievements']);
