added best maps

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/game_specific_stats/valorant_stats.html
@@ -79,7 +79,7 @@
             </div>
             <div class="game_stat">
                 <div class="label">
-                    <i class="fa-solid fa-ranking-star"></i> Peak Rank:
+                    <i class="fa-solid fa-map-location"></i> Best Maps:
                 </div>
                 <div class="value">
                     {{item.info.1}}
@@ -140,7 +140,7 @@
             Career
         </div>
         <br><br>
-        {{g.experience}}
+
         {%for item in g.experience%}
         <div class="game_stat">
             <div class="label">
